--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
       <plugin>
           <groupId>org.grails</groupId>
           <artifactId>grails-maven-plugin</artifactId>
-          <version>${grails.version}</version>
+          <version>2.2.1</version>
           <configuration>
           <fork>true</fork>
            </configuration>
