--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
    <dependency> 
       <groupId>org.grails</groupId> 
       <artifactId>grails-dependencies</artifactId> 
-      <version>${grails.version}</version> 
+      <version>2.2.1</version> 
       <type>pom</type> 
     </dependency>
     <dependency> 
